Added new admin frontend
